--- a/Hotel-reservation-system-front-end/package.json
+++ b/Hotel-reservation-system-front-end/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.0",
+    "recharts": "^3.1.2",
     "redux": "^5.0.1",
     "vite-plugin-style-import": "^2.0.0"
   },
